development/jaeger.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: lupinemoon
  labels:
    app: jaeger
    jaeger-infra: jaeger-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jaeger
        jaeger-infra: jaeger-lupinemoon
    spec:
      containers:
        - image: jaegertracing/all-in-one
          name: jaeger
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
          readinessProbe:
            httpGet:
              path: '/'
              port: 14269
            initialDelaySeconds: 5
---
apiVersion: v1
kind: List
items:
  - apiVersion: v1
    kind: Service
    metadata:
      name: jaeger-query
      namespace: lupinemoon
      labels:
        app: jaeger
        jaeger-infra: jaeger-service
    spec:
      ports:
        - name: query-http
          port: 16686
          protocol: TCP
          targetPort: 16686
      selector:
        jaeger-infra: jaeger-lupinemoon
      type: ClusterIP
  - apiVersion: v1
    kind: Service
    metadata:
      name: jaeger-collector
      namespace: lupinemoon
      labels:
        app: jaeger
        jaeger-infra: collector-service
    spec:
      ports:
        - name: jaeger-collector-tchannel
          port: 14267
          protocol: TCP
          targetPort: 14267
        - name: jaeger-collector-http
          port: 14268
          protocol: TCP
          targetPort: 14268
        - name: jaeger-collector-zipkin
          port: 9411
          protocol: TCP
          targetPort: 9411
      selector:
        jaeger-infra: jaeger-lupinemoon
      type: ClusterIP
  - apiVersion: v1
    kind: Service
    metadata:
      name: jaeger-agent
      namespace: lupinemoon
      labels:
        app: jaeger
        jaeger-infra: agent-service
    spec:
      ports:
        - name: agent-zipkin-thrift
          port: 5775
          protocol: UDP
          targetPort: 5775
        - name: agent-compact
          port: 6831
          protocol: UDP
          targetPort: 6831
        - name: agent-binary
          port: 6832
          protocol: UDP
          targetPort: 6832
        - name: agent-configs
          port: 5778
          protocol: TCP
          targetPort: 5778
      clusterIP: None
      selector:
        jaeger-infra: jaeger-lupinemoon
  - apiVersion: v1
    kind: Service
    metadata:
      name: zipkin
      namespace: lupinemoon
      labels:
        app: jaeger
        jaeger-infra: zipkin-service
    spec:
      ports:
        - name: jaeger-collector-zipkin
          port: 9411
          protocol: TCP
          targetPort: 9411
      clusterIP: None
      selector:
        jaeger-infra: jaeger-lupinemoon
