development/postgres.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: lupinemoon
spec:
  replicas: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:11
          imagePullPolicy: IfNotPresent
          name: postgres-container
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-db-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: postgres-storage
              mountPath: /var/lib/postgresql/db-data
      volumes:
        - name: postgres-db-scripts
          configMap:
            name: postgres-initdb
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lupinemoon-service
  namespace: lupinemoon
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
