development/registration.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registration-svc-deployment
  namespace: lupinemoon
spec:
  replicas: 2
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: registration-svc-lupinemoon
    spec:
      containers:
        - image: registration-service-lupinemoon:1.0
          imagePullPolicy: IfNotPresent
          name: registration-svc-container
---
apiVersion: v1
kind: Service
metadata:
  name: registration-svc-lupinemoon-service
  namespace: lupinemoon
  labels:
    app: registration-svc-lupinemoon
spec:
  type: ClusterIP
  selector:
    app: registration-svc-lupinemoon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
