development/api-gateway.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-gateway-deployment
  namespace: lupinemoon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: api-gateway-lupinemoon:1.0
          imagePullPolicy: IfNotPresent
          name: api-gateway-container
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-lupinemoon-service
  namespace: lupinemoon
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8789
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: lupinemoon
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: gateway.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: api-gateway-lupinemoon-service
              servicePort: 80
