development/nats.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: nats-deployment
  namespace: lupinemoon
  labels:
    app: nats-lupinemoon
spec:
  serviceName: nats-lupinemoon
  replicas: 3
  template:
    metadata:
      labels:
        app: nats-lupinemoon
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nats
              topologyKey: kubernetes.io/hostname
      containers:
        - image: nats-lupinemoon:1.0
          imagePullPolicy: IfNotPresent
          name: nats-container
          ports:
            - containerPort: 4222
              name: client
            - containerPort: 6222
              name: cluster
            - containerPort: 8222
              name: monitor
          livenessProbe:
            httpGet:
              path: /
              port: 8222
            initialDelaySeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nats-lupinemoon-service
  namespace: lupinemoon
  labels:
    app: nats-lupinemoon
spec:
  clusterIP: None
  selector:
    app: nats-lupinemoon
  ports:
    - name: client
      port: 4222
    - name: cluster
      port: 6222
    - name: monitor
      port: 8222
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nats-ingress
  namespace: lupinemoon
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nats.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: nats-lupinemoon-service
              servicePort: 4222
