development/redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: lupinemoon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-lupinemoon
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: redis-lupinemoon
    spec:
      containers:
        - image: redis:alpine
          imagePullPolicy: IfNotPresent
          name: redis-container
          ports:
            - containerPort: 6379
              hostPort: 6379
              name: redis
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: redis-lupinemoon-service
  namespace: lupinemoon
spec:
  type: ClusterIP
  selector:
    app: redis-lupinemoon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6379
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: lupinemoon
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: redis.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: redis-lupinemoon-service
              servicePort: 80
